--- a/styles.css
+++ b/styles.css
@@ -156,18 +156,11 @@ main h1 {
     z-index: 1000;
   }
   @media (max-width: 768px) {
-    header {
-        flex-direction: column;  /* Položky pod sebe */
-        text-align: center;
-        padding: 10px;
-    }
-
     nav ul {
-        flex-direction: column; /* Menu pod sebou */
+      display: none; /* skryj klasické menu */
     }
-
-    nav ul li {
-        margin: 5px 0; /* Mezera mezi položkami */
+    .mobile-menu-button {
+      display: block; /* zobraz hamburger */
     }
 }
 /* ========== STICKY NAV ========== */
